--- a/recipe-recipes/scones.html
+++ b/recipe-recipes/scones.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Scones</h1>
-    <img src="../images/scone-varieties.jpg">
+    <img src="../images/scone-varieties.jpg" alt="scones">
     <h3>Description</h3>
     <p>Use this basic scone dough for any sweet scone variety. 
         Feel free to increase the vanilla extract and/or add other flavor 
