--- a/recipe-recipes/cinnamon-bun.html
+++ b/recipe-recipes/cinnamon-bun.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cinnamon Buns</h1>
-    <img src="~/recipes/images/cinnaroll.webp">
+    <img src="~/recipes/images/cinnaroll.webp" alt="cinnamon buns">
     <h3>Description</h3>
      <p>
         Boldly alleging to be the best cinnamon buns in the world,
